--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,8 @@
   "explorer.compactFolders": false,
   "javascript.updateImportsOnFileMove.enabled": "always",
   "window.zoomLevel": 0,
-  "prettier.arrowParens": "avoid"
+  "prettier.arrowParens": "avoid",
+  "cSpell.words": [
+    "btns"
+  ]
 }
