grid and list view buttons added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,8 @@
   "window.zoomLevel": 0,
   "prettier.arrowParens": "avoid",
   "cSpell.words": [
-    "btns"
+    "btns",
+    "gridview",
+    "listview"
   ]
 }
